--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,3 +7,5 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hebernate.format_sql=true
+
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
